# systemf

./: .gitignore  .gitmodules  README.md  deploy.md  main.sf  pyproject.toml  status.md  t3.sf  test.sf
analysis/: .gitignore  ABEXPORT_WRAPPER_EXPLORATION.md  ABSBINDS_CORE_TRANSLATION_EXPLORATION.md  AGENT_SPLIT_EXPLORATION.md  API_TRACE_CAPTURE_PLAN.md  API_TRACE_CAPTURE_RESULTS.md  API_TRACE_RESULTS.md  BASE_MODEL_VALIDATION.md  BIDIR_PATTERN_POLYMORPHISM_EXPLORATION.md  BUB_EVENTS_BIDIRECTIONAL_EXPLORATION.md  BUB_EVENTS_CHANNEL_MESSAGE_EXPLORATION.md  BUB_EVENTS_HOOK_INTEGRATION_EXPLORATION.md  BUB_EVENTS_HOOK_MECHANISM_EXPLORATION.md  BUB_EVENTS_LINKING_EXPLORATION.md  BUB_EVENTS_SESSION_ID_LINKING_EXPLORATION.md  BUB_SKILL_REGISTRATION_EXPLORATION.md  CHANNEL_MESSAGE_FIELDS_EXPLORATION.md  CHANNEL_PROVISION_EXPLORATION.md  CLEANUP_PLAN.md  CLI_PROVIDER_EXPLORATION.md  CLOSURE_FLOW_EXPLORATION.md  COMMAND_EXECUTION_LOST_EXPLORATION.md  COMMAND_FUNCTIONS_EXTRACTION.md  CORE_SYSTEM_F.md  (+97 more)
bub_events/: pyproject.toml
bub_events/src/bub_events/: __init__.py  channel.py  hook.py  message.py  settings.py
bub_events/src/skills/bub-events/: SKILL.md
bub_events/src/skills/bub-events/references/: api-reference.md
bub_events/src/skills/bub-events/templates/: cron.timer
bub_events/tests/: test_channel.py  test_hook.py  test_message.py
bub_sf/: README.md  pyproject.toml
bub_sf/changes/: 1-fork-store-cleanup.md
bub_sf/docs/: agent-design.md  deploy.md  design_notes.md
bub_sf/docs/store/: async.md  core.md  core2.md  notes.md  query.md  tests.md
bub_sf/src/bub_sf/: __init__.py  bub.sf  bub.sf.bak  bub_ext.py  demo.py  hook.py  hook_cli.py  sf_helpers.py  sf_hook.py  tape_grouping.py  utils.py
bub_sf/src/bub_sf/agent/: agent.py  tape.py
bub_sf/src/bub_sf/channels/: __init__.py  allinone.py  notification.py
bub_sf/src/bub_sf/store/: __init__.py  fork_store.py  query.py  types.py
bub_sf/src/skills/sf-coding/: SKILL.md
bub_sf/src/skills/sf-coding/references/: example.sf
bub_sf/tests/: conftest.py  test_bub_ext.py  test_hook_cli.py  test_session_info.py  test_tape_grouping.py
bub_sf/tests/store/: debug_cte.py  stress_deep_fork.py  test_fork_tape_store.py  test_performance.py  test_query.py  test_republic_tape_contract.py  validate_schema.py
systemf/: ELAB3_PROJECT_STATUS.md  README.md  demo.py  prelude.sf  pyproject.toml  test-repl-clean.sf  test-suite-repl.sf  test-suite.sf
systemf/docs/: INDEX.md  README.md  language.md  module-design.md  syntax.md
systemf/docs/_archive/: ALGORITHM_VALIDATION.md  FORWARD_REFERENCES_RESEARCH.md  elaboration-comparison.md  elaborator-implementation-plan.md
systemf/docs/_archive/working/: parser-impl-plan.md  parser-refactor-context.md
systemf/docs/_reference-materials/: parser-tree.md  parsy-parser-design.md  parsy-parser-tests.md
systemf/docs/architecture/: bidirectional-algorithm.md  elab2-design.md  elaborator-design.md  implicit-instantiation.md  llm-synthesizer-design.md  llm-synthesizer-qa.md  llm-synthesizer-qa2.md  llm-synthesizer-summary.md  overview.md  repl-design.md  scoped-ast-design.md  type-inference-algorithm.md  type-system-review.md
systemf/docs/concepts/: bidirectional-checking.md  implicit-instantiation.md  type-system.md  unification.md
systemf/docs/development/: design-decisions.md  putting2007-fix-guide.md  troubleshooting.md  type-inference-bugs.md
systemf/docs/getting-started/: README.md
systemf/docs/implementation/: parser-indentation.md
systemf/docs/notes/: system-sb-implementation.md  visible-type-application.md
systemf/docs/research/: eisenberg-2016-examples-extracted.tex  eisenberg-2016-index.txt  eisenberg-2016-visible-type-application.txt  jones-shields-2002-index.txt  jones-shields-2002-scoped-type-variables.txt  subsumption-implementation-summary.md  systemf-putting2007-validation-results.md  systemf-putting2007-validation.md
systemf/docs/working/: elaborator_refactor_manifest.md
systemf/examples/: identity.sf  list.sf  maybe.sf
systemf/research/putting2007_tests/: test_putting2007_examples.py  test_putting2007_gaps.py
systemf/src/systemf/: __init__.py  builtins.sf  demo.sf  elab3_demo.py
systemf/src/systemf/elab3/: __init__.py  builtins.py  builtins_rts.py  core_extra.py  eval.py  matchc.py  name_gen.py  pipeline.py  pp_tything.py  reader_env.py  rename.py  rename_expr.py  repl.py  repl_driver.py  repl_main.py  repl_parser.py  repl_session.py  scc.py  tc_ctx.py  typecheck.py  typecheck_expr.py  val_pp.py
systemf/src/systemf/elab3/types/: __init__.py  ast.py  core.py  core_pp.py  mod.py  protocols.py  synths.py  tc.py  ty.py  tything.py  val.py  vpartial.py  wrapper.py  xpat.py
systemf/src/systemf/surface/: __init__.py  types.py
systemf/src/systemf/surface/parser/: __init__.py  declarations.py  expressions.py  helpers.py  lexer.py  type_parser.py  types.py
systemf/src/systemf/utils/: __init__.py  ast_utils.py  cons.py  location.py  uniq.py
systemf/tests/: conftest.py  llm_complex.sf  llm_examples.sf  llm_multiparam.sf
systemf/tests/data/: FuncallMod.sf
systemf/tests/test_elab2/: test_eval.py  test_tyck.py  test_tyck_examples_terms.py  test_tyck_examples_util_rules.py  test_types.py  test_unify.py  tyck_examples.md
systemf/tests/test_elab3/: test_bindings.py  test_builtins.py  test_core_extra.py  test_eval.py  test_matchc.py  test_multiple.py  test_name_cache.py  test_pp_tything.py  test_putting2007_rules.py  test_putting2007_terms.py  test_reader_env.py  test_rename.py  test_rename_expr.py  test_rename_expr_types.py  test_rename_lhs.py  test_repl_parser.py  test_repl_session_funcall.py  test_scc.py  test_tc_ctx.py  test_typecheck_expr.py  test_types.py  test_unify.py  test_val_pp.py  test_zonk.py
systemf/tests/test_surface/: test_lexer.py
systemf/tests/test_surface/test_parser/: conftest.py  test_cons_regression.py  test_decl_docstrings.py  test_decl_pragma.py  test_declarations.py  test_expressions.py  test_helpers.py  test_multiple_decls.py  test_parser_complex.py  test_parser_complex.py.backup
systemf/typings/parsy-stubs/: __init__.pyi
(+155 files in other folders)
