[project]
name = "systemf_workspace"
version = "0.1.0"

dependencies = [
    "bub_sf",
    "systemf",
    "bub",
]

[tool.uv.workspace]
members = [
    "systemf",
    "bub_sf",
    "bub",
    "republic",
]

[tool.uv.sources]
systemf = { workspace = true }
bub_sf = { workspace = true }
bub = { workspace = true }
republic = { workspace = true }

[tool.pyright]
extraPaths = [
  "bub_sf/src/",
  "systemf/src/",
  "bub/src/",
  "republic/src/",
]
