[project]
name = "systemf_workspace"
version = "0.1.0"

dependencies = [
    "bub_sf",
    "bub_events",
    "systemf",
    "bub",
]

[tool.uv.workspace]
members = [
    "systemf",
    "bub_sf",
    "bub_events",
    "bub",
    "republic",
]

[tool.uv.sources]
systemf = { workspace = true }
bub_sf = { workspace = true }
bub = { workspace = true }
republic = { workspace = true }
bub_events = { workspace = true }

[tool.pyright]
extraPaths = [
  "bub_sf/src/",
  "systemf/src/",
  "bub/src/",
  "republic/src/",
  "bub_events/src/",
]
