[project]
name = "systemf_workspace"
version = "0.1.0"

dependencies = [
    "systemf",
    "bub_sf",
    "bub_events",
    "bub",
    "republic",
]

[tool.uv.workspace]
members = [
    "systemf",
    "bub_sf",
    "bub_events",
    "bub",
    "republic",
]

[tool.uv.sources]
systemf = { workspace = true }
bub_sf = { workspace = true }
bub_events = { workspace = true }
bub = { workspace = true }
republic = { workspace = true }

[tool.pyright]
extraPaths = [
  "systemf/src/",
  "bub_sf/src/",
  "bub_events/src/",
  "bub/src/",
  "republic/src/",
]
