[project]
name = "bub-sf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "emliunix", email = "emliunix@hotmail.com" }
]
requires-python = ">=3.14, <4.0"
dependencies = [
    "systemf",
    "bub",
    "loguru",
    "republic",
    "aiosqlite>=0.22.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]

[project.entry-points.bub]
sf = "bub_sf.hook:SFHookImpl"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["skills", "bub_sf"]
namespace = true
