[project]
name = "systemf"
version = "0.1.0"
description = "System F with algebraic data types - type checker and interpreter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "parsy>=2.1",
    "pyrsistent>=0.20.0",
]

[project.scripts]
systemf = "systemf.eval.repl:main"
systemf-repl = "systemf.eval.repl:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
mypy_path = "./src/"
strict = true
warn_return_any = true
warn_unused_configs = true
